fixed textarea glitch on smaller screens

--- a/CSS+SCSS/style.scss
+++ b/CSS+SCSS/style.scss
@@ -34,7 +34,7 @@ h4 {
 p {
   color: #293a42;
 }
-textarea {
+.Textarea {
   outline: #293268;
   resize: none;
   height: 12em !important;
